testsuite/poke.pkl/if-diag-2.pk
/* { dg-do compile } */

if (10#B)  /* { dg-error "invalid expression.*\n.*expected boolean" } */
  {
  }
